sizes fixed + navigation on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1277,7 +1277,7 @@
 			.poptrox-popup .closer,
 			.poptrox-popup .nav-previous,
 			.poptrox-popup .nav-next {
-				display: none !important;
+				/* display: none !important; */
 			}
 
 		}
